test: add cross-module checks and restore Java 8 test compatibility